--- a/lexiflux/resources/chat_models.yaml
+++ b/lexiflux/resources/chat_models.yaml
@@ -1,30 +1,50 @@
 # OpenAI Models
-gpt-4o-mini:
-  title: OpenAI GPT-4o mini
+gpt-5:
+  title: OpenAI GPT-5
   model: ChatOpenAI
-  suffix: 🔗 4o°
+  suffix: 🔗 5
+
+gpt-5-mini:
+  title: OpenAI GPT-5 mini
+  model: ChatOpenAI
+  suffix: 🔗 5°
+
+gpt-5-nano:
+  title: OpenAI GPT-5 nano
+  model: ChatOpenAI
+  suffix: 🔗 5ⁿ
+
+gpt-5-chat-latest:
+  title: OpenAI GPT-5 Chat Latest
+  model: ChatOpenAI
+  suffix: 🔗 5⚡
 
 gpt-4o:
   title: OpenAI GPT-4o
   model: ChatOpenAI
   suffix: 🔗 4o
 
-gpt-4-turbo:
-  title: OpenAI GPT-4 Turbo
+gpt-4o-mini:
+  title: OpenAI GPT-4o mini
   model: ChatOpenAI
-  suffix: 🔗 4T
-
-o1-preview:
-  title: OpenAI o1 Preview
-  model: ChatOpenAI
-  suffix: 🔗 o1
-
-o1-mini:
-  title: OpenAI o1 mini
-  model: ChatOpenAI
-  suffix: 🔗 o1°
+  suffix: 🔗 4o°
 
 # Claude Models
+claude-opus-4.1:
+  title: Claude Opus 4.1
+  model: ChatAnthropic
+  suffix: 💡4.1♦
+
+claude-opus-4:
+  title: Claude Opus 4
+  model: ChatAnthropic
+  suffix: 💡4♦
+
+claude-sonnet-4:
+  title: Claude Sonnet 4
+  model: ChatAnthropic
+  suffix: 💡4
+
 claude-3-5-sonnet-20241022:
   title: Claude 3.5 Sonnet
   model: ChatAnthropic
@@ -34,16 +54,6 @@ claude-3-5-haiku-20241022:
   title: Claude 3.5 Haiku
   model: ChatAnthropic
   suffix: 💡3.5°
-
-claude-3-opus-20240229:
-  title: Claude 3 Opus
-  model: ChatAnthropic
-  suffix: 💡3♦
-
-claude-3-sonnet-20240229:
-  title: Claude 3 Sonnet
-  model: ChatAnthropic
-  suffix: 💡3
 
 # Other Models
 llama3.2:
