--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,27 +4,27 @@ aiohappyeyeballs==2.6.1
     # via
     #   -r requirements.txt
     #   aiohttp
-aiohttp==3.12.6
+aiohttp==3.12.15
     # via
     #   -r requirements.txt
     #   langchain-community
-aiosignal==1.3.2
+aiosignal==1.4.0
     # via
     #   -r requirements.txt
     #   aiohttp
-allure-pytest==2.14.2
+allure-pytest==2.15.0
     # via -r requirements.dev.in
-allure-python-commons==2.14.2
+allure-python-commons==2.15.0
     # via allure-pytest
 annotated-types==0.7.0
     # via
     #   -r requirements.txt
     #   pydantic
-anthropic==0.52.2
+anthropic==0.62.0
     # via
     #   -r requirements.txt
     #   langchain-anthropic
-anyio==4.9.0
+anyio==4.10.0
     # via
     #   -r requirements.txt
     #   anthropic
@@ -33,20 +33,20 @@ anyio==4.9.0
     #   openai
 appnope==0.1.4
     # via ipykernel
-argon2-cffi==23.1.0
+argon2-cffi==25.1.0
     # via
     #   jupyter-server
     #   notebook
-argon2-cffi-bindings==21.2.0
+argon2-cffi-bindings==25.1.0
     # via argon2-cffi
 arrow==1.3.0
     # via isoduration
-asgiref==3.8.1
+asgiref==3.9.1
     # via
     #   -r requirements.txt
     #   django
     #   django-allauth
-astroid==3.3.10
+astroid==3.3.11
     # via pylint
 asttokens==3.0.0
     # via
@@ -66,7 +66,7 @@ babel==2.17.0
     #   -r requirements.txt
     #   courlan
     #   mkdocs-material
-backrefs==5.8
+backrefs==5.9
     # via mkdocs-material
 beautifulsoup4==4.13.4
     # via
@@ -79,7 +79,7 @@ blis==1.2.1
     # via
     #   -r requirements.txt
     #   thinc
-bracex==2.5.post1
+bracex==2.6
     # via wcmatch
 cached-property==2.0.1
     # via
@@ -95,7 +95,7 @@ catalogue==2.0.10
     #   spacy
     #   srsly
     #   thinc
-certifi==2025.4.26
+certifi==2025.8.3
     # via
     #   -r requirements.txt
     #   httpcore
@@ -112,7 +112,7 @@ cfgv==3.4.0
     # via pre-commit
 chardet==5.2.0
     # via -r requirements.txt
-charset-normalizer==3.4.2
+charset-normalizer==3.4.3
     # via
     #   -r requirements.txt
     #   htmldate
@@ -137,7 +137,7 @@ colorama==0.4.6
     #   griffe
     #   icecream
     #   mkdocs-material
-comm==0.2.2
+comm==0.2.3
     # via ipykernel
 confection==0.1.5
     # via
@@ -148,13 +148,13 @@ courlan==1.3.2
     # via
     #   -r requirements.txt
     #   trafilatura
-coverage==7.8.2
+coverage==7.10.3
     # via
     #   coveralls
     #   pytest-cov
 coveralls==4.0.1
     # via -r requirements.dev.in
-cryptography==45.0.3
+cryptography==45.0.6
     # via
     #   -r requirements.txt
     #   pyopenssl
@@ -168,11 +168,11 @@ dataclasses-json==0.6.7
     # via
     #   -r requirements.txt
     #   langchain-community
-dateparser==1.2.1
+dateparser==1.2.2
     # via
     #   -r requirements.txt
     #   htmldate
-debugpy==1.8.14
+debugpy==1.8.16
     # via ipykernel
 decorator==5.2.1
     # via ipython
@@ -182,22 +182,22 @@ defusedxml==0.7.1
     # via nbconvert
 dill==0.4.0
     # via pylint
-distlib==0.3.9
+distlib==0.4.0
     # via virtualenv
 distro==1.9.0
     # via
     #   -r requirements.txt
     #   anthropic
     #   openai
-django==5.2.1
+django==5.2.5
     # via
     #   -r requirements.txt
     #   django-allauth
     #   django-debug-toolbar
     #   django-extensions
-django-allauth==65.9.0
+django-allauth==65.10.0
     # via -r requirements.txt
-django-debug-toolbar==5.2.0
+django-debug-toolbar==6.0.0
     # via -r requirements.dev.in
 django-extensions==4.1
     # via -r requirements.txt
@@ -213,7 +213,7 @@ executing==2.2.0
     # via
     #   icecream
     #   stack-data
-faker==37.3.0
+faker==37.5.3
     # via -r requirements.dev.in
 fastjsonschema==2.21.1
     # via nbformat
@@ -234,12 +234,12 @@ frozendict==2.4.6
     # via
     #   -r requirements.txt
     #   genanki
-frozenlist==1.6.0
+frozenlist==1.7.0
     # via
     #   -r requirements.txt
     #   aiohttp
     #   aiosignal
-fsspec==2025.5.1
+fsspec==2025.7.0
     # via
     #   -r requirements.txt
     #   huggingface-hub
@@ -251,11 +251,11 @@ google-ai-generativelanguage==0.6.18
     # via
     #   -r requirements.txt
     #   langchain-google-genai
-google-api-core==2.24.2
+google-api-core==2.25.1
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
-google-auth==2.40.2
+google-auth==2.40.3
     # via
     #   -r requirements.txt
     #   google-ai-generativelanguage
@@ -267,14 +267,14 @@ googleapis-common-protos==1.70.0
     #   grpcio-status
 googletrans==4.0.2
     # via -r requirements.txt
-griffe==1.7.3
+griffe==1.11.1
     # via mkdocstrings-python
-grpcio==1.72.1
+grpcio==1.74.0
     # via
     #   -r requirements.txt
     #   google-api-core
     #   grpcio-status
-grpcio-status==1.72.1
+grpcio-status==1.74.0
     # via
     #   -r requirements.txt
     #   google-api-core
@@ -287,7 +287,7 @@ h2==4.2.0
     # via
     #   -r requirements.txt
     #   httpx
-hf-xet==1.1.2
+hf-xet==1.1.7
     # via
     #   -r requirements.txt
     #   huggingface-hub
@@ -312,12 +312,12 @@ httpx==0.28.1
     #   langsmith
     #   ollama
     #   openai
-httpx-sse==0.4.0
+httpx-sse==0.4.1
     # via
     #   -r requirements.txt
     #   langchain-community
     #   langchain-mistralai
-huggingface-hub==0.32.3
+huggingface-hub==0.34.4
     # via
     #   -r requirements.txt
     #   tokenizers
@@ -327,7 +327,7 @@ hyperframe==6.1.0
     #   h2
 icecream==2.1.3
     # via -r requirements.dev.in
-identify==2.6.12
+identify==2.6.13
     # via pre-commit
 idna==3.10
     # via
@@ -342,7 +342,7 @@ iniconfig==2.1.0
     # via pytest
 invoke==2.2.0
     # via -r requirements.dev.in
-ipykernel==6.29.5
+ipykernel==6.30.1
     # via
     #   jupyter-console
     #   nbclassic
@@ -389,7 +389,7 @@ jsonpointer==3.0.0
     #   -r requirements.txt
     #   jsonpatch
     #   jsonschema
-jsonschema==4.24.0
+jsonschema==4.25.0
     # via
     #   jupyter-events
     #   nbformat
@@ -428,15 +428,15 @@ justext==3.0.2
     # via
     #   -r requirements.txt
     #   trafilatura
-langchain==0.3.25
+langchain==0.3.27
     # via
     #   -r requirements.txt
     #   langchain-community
-langchain-anthropic==0.3.14
+langchain-anthropic==0.3.18
     # via -r requirements.txt
-langchain-community==0.3.24
+langchain-community==0.3.27
     # via -r requirements.txt
-langchain-core==0.3.63
+langchain-core==0.3.74
     # via
     #   -r requirements.txt
     #   langchain
@@ -446,13 +446,13 @@ langchain-core==0.3.63
     #   langchain-mistralai
     #   langchain-openai
     #   langchain-text-splitters
-langchain-google-genai==2.1.5
+langchain-google-genai==2.1.9
     # via -r requirements.txt
-langchain-mistralai==0.2.10
+langchain-mistralai==0.2.11
     # via -r requirements.txt
-langchain-openai==0.3.18
+langchain-openai==0.3.29
     # via -r requirements.txt
-langchain-text-splitters==0.3.8
+langchain-text-splitters==0.3.9
     # via
     #   -r requirements.txt
     #   langchain
@@ -460,7 +460,7 @@ langcodes==3.5.0
     # via
     #   -r requirements.txt
     #   spacy
-langsmith==0.3.43
+langsmith==0.4.13
     # via
     #   -r requirements.txt
     #   langchain
@@ -470,6 +470,8 @@ language-data==1.3.0
     # via
     #   -r requirements.txt
     #   langcodes
+lark==1.2.2
+    # via rfc3987-syntax
 lxml==5.4.0
     # via
     #   -r requirements.txt
@@ -487,14 +489,14 @@ marisa-trie==1.2.1
     # via
     #   -r requirements.txt
     #   language-data
-markdown==3.8
+markdown==3.8.2
     # via
     #   mkdocs
     #   mkdocs-autorefs
     #   mkdocs-material
     #   mkdocstrings
     #   pymdown-extensions
-markdown-it-py==3.0.0
+markdown-it-py==4.0.0
     # via
     #   -r requirements.txt
     #   rich
@@ -541,17 +543,17 @@ mkdocs-awesome-pages-plugin==2.10.1
     # via -r requirements.dev.in
 mkdocs-get-deps==0.2.0
     # via mkdocs
-mkdocs-material==9.6.14
+mkdocs-material==9.6.16
     # via -r requirements.dev.in
 mkdocs-material-extensions==1.3.1
     # via mkdocs-material
-mkdocstrings==0.29.1
+mkdocstrings==0.30.0
     # via
     #   -r requirements.dev.in
     #   mkdocstrings-python
-mkdocstrings-python==1.16.11
+mkdocstrings-python==1.16.12
     # via mkdocstrings
-multidict==6.4.4
+multidict==6.6.4
     # via
     #   -r requirements.txt
     #   aiohttp
@@ -562,7 +564,7 @@ murmurhash==1.0.13
     #   preshed
     #   spacy
     #   thinc
-mypy==1.16.0
+mypy==1.17.1
     # via -r requirements.dev.in
 mypy-extensions==1.1.0
     # via
@@ -606,13 +608,13 @@ numpy==1.26.4
     #   langchain-community
     #   spacy
     #   thinc
-ollama==0.5.1
+ollama==0.5.3
     # via -r requirements.txt
-openai==1.82.1
+openai==1.99.9
     # via
     #   -r requirements.txt
     #   langchain-openai
-orjson==3.10.18
+orjson==3.11.1
     # via
     #   -r requirements.txt
     #   langsmith
@@ -622,7 +624,7 @@ outcome==1.3.0.post0
     #   trio-websocket
 overrides==7.7.0
     # via jupyter-server
-packaging==24.2
+packaging==25.0
     # via
     #   -r requirements.txt
     #   huggingface-hub
@@ -662,14 +664,15 @@ pluggy==1.6.0
     # via
     #   allure-python-commons
     #   pytest
-pre-commit==4.2.0
+    #   pytest-cov
+pre-commit==4.3.0
     # via -r requirements.dev.in
 preshed==3.0.10
     # via
     #   -r requirements.txt
     #   spacy
     #   thinc
-prometheus-client==0.22.0
+prometheus-client==0.22.1
     # via
     #   jupyter-server
     #   notebook
@@ -677,7 +680,7 @@ prompt-toolkit==3.0.51
     # via
     #   ipython
     #   jupyter-console
-propcache==0.3.1
+propcache==0.3.2
     # via
     #   -r requirements.txt
     #   aiohttp
@@ -714,7 +717,7 @@ pyasn1-modules==0.4.2
     # via
     #   -r requirements.txt
     #   google-auth
-pybind11==2.13.6
+pybind11==3.0.0
     # via
     #   -r requirements.txt
     #   fasttext
@@ -722,7 +725,7 @@ pycparser==2.22
     # via
     #   -r requirements.txt
     #   cffi
-pydantic==2.11.5
+pydantic==2.11.7
     # via
     #   -r requirements.txt
     #   anthropic
@@ -743,11 +746,11 @@ pydantic-core==2.33.2
     # via
     #   -r requirements.txt
     #   pydantic
-pydantic-settings==2.9.1
+pydantic-settings==2.10.1
     # via
     #   -r requirements.txt
     #   langchain-community
-pygments==2.19.1
+pygments==2.19.2
     # via
     #   -r requirements.txt
     #   icecream
@@ -755,19 +758,20 @@ pygments==2.19.1
     #   jupyter-console
     #   mkdocs-material
     #   nbconvert
+    #   pytest
     #   rich
 pyjwt==2.10.1
     # via -r requirements.txt
-pylint==3.3.7
+pylint==3.3.8
     # via
     #   -r requirements.dev.in
     #   pylint-django
     #   pylint-plugin-utils
 pylint-django==2.6.1
     # via -r requirements.dev.in
-pylint-plugin-utils==0.8.2
+pylint-plugin-utils==0.9.0
     # via pylint-django
-pymdown-extensions==10.15
+pymdown-extensions==10.16.1
     # via
     #   -r requirements.dev.in
     #   mkdocs-material
@@ -776,18 +780,18 @@ pyopenssl==25.1.0
     # via -r requirements.txt
 pysocks==1.7.1
     # via urllib3
-pytest==8.3.5
+pytest==8.4.1
     # via
     #   -r requirements.dev.in
     #   allure-pytest
     #   pytest-cov
     #   pytest-django
     #   pytest-xdist
-pytest-cov==6.1.1
+pytest-cov==6.2.1
     # via -r requirements.dev.in
 pytest-django==4.11.1
     # via -r requirements.dev.in
-pytest-xdist==3.7.0
+pytest-xdist==3.8.0
     # via -r requirements.dev.in
 python-dateutil==2.9.0.post0
     # via
@@ -797,7 +801,7 @@ python-dateutil==2.9.0.post0
     #   ghp-import
     #   htmldate
     #   jupyter-client
-python-dotenv==1.1.0
+python-dotenv==1.1.1
     # via
     #   -r requirements.txt
     #   pydantic-settings
@@ -824,7 +828,7 @@ pyyaml==6.0.2
     #   pyyaml-env-tag
 pyyaml-env-tag==1.1
     # via mkdocs
-pyzmq==26.4.0
+pyzmq==27.0.1
     # via
     #   ipykernel
     #   jupyter-client
@@ -836,13 +840,13 @@ referencing==0.36.2
     #   jsonschema
     #   jsonschema-specifications
     #   jupyter-events
-regex==2024.11.6
+regex==2025.7.34
     # via
     #   -r requirements.txt
     #   dateparser
     #   nltk
     #   tiktoken
-requests==2.32.3
+requests==2.32.4
     # via
     #   -r requirements.txt
     #   coveralls
@@ -872,11 +876,13 @@ rfc3986-validator==0.1.1
     # via
     #   jsonschema
     #   jupyter-events
-rich==14.0.0
+rfc3987-syntax==1.1.0
+    # via jsonschema
+rich==14.1.0
     # via
     #   -r requirements.txt
     #   typer
-rpds-py==0.25.1
+rpds-py==0.27.0
     # via
     #   jsonschema
     #   referencing
@@ -884,7 +890,7 @@ rsa==4.9.1
     # via
     #   -r requirements.txt
     #   google-auth
-selenium==4.33.0
+selenium==4.34.2
     # via -r requirements.dev.in
 send2trash==1.8.3
     # via
@@ -908,7 +914,7 @@ six==1.17.0
     #   python-dateutil
     #   rfc3339-validator
     #   transliterate
-smart-open==7.1.0
+smart-open==7.3.0.post1
     # via
     #   -r requirements.txt
     #   weasel
@@ -935,7 +941,7 @@ spacy-loggers==1.0.5
     # via
     #   -r requirements.txt
     #   spacy
-sqlalchemy==2.0.41
+sqlalchemy==2.0.43
     # via
     #   -r requirements.txt
     #   langchain
@@ -968,7 +974,7 @@ thinc==8.3.4
     # via
     #   -r requirements.txt
     #   spacy
-tiktoken==0.9.0
+tiktoken==0.11.0
     # via
     #   -r requirements.txt
     #   langchain-openai
@@ -978,13 +984,13 @@ tld==0.13.1
     # via
     #   -r requirements.txt
     #   courlan
-tokenizers==0.21.1
+tokenizers==0.21.4
     # via
     #   -r requirements.txt
     #   langchain-mistralai
-tomlkit==0.13.2
+tomlkit==0.13.3
     # via pylint
-tornado==6.5.1
+tornado==6.5.2
     # via
     #   ipykernel
     #   jupyter-client
@@ -1003,7 +1009,6 @@ trafilatura==2.0.0
 traitlets==5.9.0
     # via
     #   -r requirements.dev.in
-    #   comm
     #   ipykernel
     #   ipython
     #   jupyter-client
@@ -1029,11 +1034,12 @@ typer==0.16.0
     #   -r requirements.txt
     #   spacy
     #   weasel
-types-python-dateutil==2.9.0.20250516
+types-python-dateutil==2.9.0.20250809
     # via arrow
-typing-extensions==4.13.2
+typing-extensions==4.14.1
     # via
     #   -r requirements.txt
+    #   aiosignal
     #   anthropic
     #   anyio
     #   beautifulsoup4
@@ -1069,7 +1075,7 @@ unidecode==1.4.0
     # via -r requirements.txt
 uri-template==1.3.0
     # via jsonschema
-urllib3==2.4.0
+urllib3==2.5.0
     # via
     #   -r requirements.txt
     #   courlan
@@ -1077,7 +1083,7 @@ urllib3==2.4.0
     #   requests
     #   selenium
     #   trafilatura
-virtualenv==20.31.2
+virtualenv==20.33.1
     # via pre-commit
 wasabi==1.1.3
     # via
@@ -1087,7 +1093,7 @@ wasabi==1.1.3
     #   weasel
 watchdog==6.0.0
     # via mkdocs
-wcmatch==10.0
+wcmatch==10.1
     # via mkdocs-awesome-pages-plugin
 wcwidth==0.2.13
     # via prompt-toolkit
@@ -1107,13 +1113,13 @@ websocket-client==1.8.0
     #   selenium
 werkzeug==3.1.3
     # via -r requirements.txt
-wrapt==1.17.2
+wrapt==1.17.3
     # via
     #   -r requirements.txt
     #   smart-open
 wsproto==1.2.0
     # via trio-websocket
-yarl==1.20.0
+yarl==1.20.1
     # via
     #   -r requirements.txt
     #   aiohttp
