--- a/lexiflux/resources/chat_models.yaml
+++ b/lexiflux/resources/chat_models.yaml
@@ -30,27 +30,27 @@ gpt-4o-mini:
   suffix: 🔗 4o°
 
 # Claude Models
-claude-opus-4.1:
+claude-opus-4-1:
   title: Claude Opus 4.1
   model: ChatAnthropic
   suffix: 💡4.1♦
 
-claude-opus-4:
+claude-opus-4-0:
   title: Claude Opus 4
   model: ChatAnthropic
   suffix: 💡4♦
 
-claude-sonnet-4:
+claude-sonnet-4-0:
   title: Claude Sonnet 4
   model: ChatAnthropic
   suffix: 💡4
 
-claude-3-5-sonnet-20241022:
+claude-3-5-sonnet-latest:
   title: Claude 3.5 Sonnet
   model: ChatAnthropic
   suffix: 💡3.5
 
-claude-3-5-haiku-20241022:
+claude-3-5-haiku-latest:
   title: Claude 3.5 Haiku
   model: ChatAnthropic
   suffix: 💡3.5°
