https://github.com/andgineer/lexiflux/issues/78 deploy environments

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -74,4 +74,4 @@ repos:
         require_serial: true
         language: system
         types: [ python ]
-        exclude: ^tests/
+        exclude: (^tests/|lexiflux/environments)
