--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,6 +13,7 @@ FROM python:3.12
 ENV LEXIFLUX_UI_SETTINGS_ONLY=true
 ENV LEXIFLUX_SKIP_AUTH=true
 ENV OLLAMA_LOAD_MODEL=false
+ENV LEXIFLUX_ENV=docker
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
